syntax = "proto3";

package default;

option go_package = "p9t.io/kuberboat/pkg/proto";

message DefaultResponse {
    int32 status = 1;
}